<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="setting">Setting</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Alert">alert</string>
    <string name="CIty">city</string>
    <string name="Statue">statue</string>
    <string name="Temperature">temperature</string>
    <string name="Time">time</string>
    <string name="temp" />
    <string name="temperatur">temperature\n</string>
    <string name="title_activity_mapss">MapssActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="notification_permission">Allow Access \n</string>
    <string name="permission_request">Accept</string>
    <string name="notification_permmission_body">Please grant permission to access the app settings</string>
    <string name="dismiss">Refuse</string>
    <string name="ask_del_fav">Are You sure , you want to delete it?</string>
    <string name="del_item">Delete</string>
    <string name="some_thing_want_rong">Something went wrong\n</string>
    <string name="Language" />
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="tempreature">Tempreature</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="settingg">setting</string>
</resources>