<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weatherapp.ui.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="latlon"
            app:argType="com.example.weatherapp.Model.LocationLatLngPojo"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="fav_location"
            app:argType="com.example.weatherapp.Model.LocationLatLngPojo"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/nav_fav"
        android:name="com.example.weatherapp.ui.Favourite.view.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite">
        <action
            android:id="@+id/action_nav_fav_to_mapsFragment"
            app:destination="@id/mapsFragment" />
        <action
            android:id="@+id/action_nav_fav_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_alert"
        android:name="com.example.weatherapp.ui.alert.AlertFragment"
        android:label="@string/Alert"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.weatherapp.ui.setting.Setting"
        android:label="setting"
        tools:layout="@layout/setting" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.weatherapp.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" >
        <argument
            android:name="type"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="favourite"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>


</navigation>